# Real-Time-CC-fraud-detection-system-using-Apache-Kafka-Kafka-Streams-KSQLDB-MongoDB-and-Flink

./: .gitignore
.github/workflows/: deploy-fargate-producer.yml  msk-topic-sync.yml.disabled
EMR/: .gitignore
HomeWork3/: .gitignore  README.md  docker-compose.yml  flink_analytics.py  flink_queries.sql  generator.py  ksqldb_queries.sql  mongodb_writer.py  producer.py  reflection.md  requirements.txt
docs/: .gitignore  Project Proposal.txt  architecture.md  data-ingestion-desion.md
infra/: .gitignore  .terraform.lock.hcl  Makefile  README.md  main.tf  outputs.tf  preflight.py  providers.tf  terraform.tfvars  variables.tf  versions.tf
infra/examples/: terraform.tfvars
infra/modules/ecs-producer/: main.tf
infra/modules/emr-cluster/: main.tf
infra/modules/emr-serverless/: main.tf
infra/modules/kms/: main.tf
infra/modules/msk/: main.tf
infra/modules/s3/: main.tf
infra/modules/sg/: main.tf
infra/modules/vpc-endpoints/: main.tf
kafka/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  topics.yaml
kafka/producer/: README.md  check_kafka_connectivity.sh  check_kafka_metadata.py  producer.py  run_producer.sh  simple_producer.py  start.sh
kafka/scripts/: create_topics.py  update_bootstrap_env.py
scripts/: CHECK_README.md  check_pipeline_status.sh  prepare_emr_job.sh  setup_all.sh  setup_producer_on_emr.sh  sync_msk_env.sh
spark/: Makefile  README.md  __init__.py  bronze_stream.py  emr_job.env  gold_stream.py  schemas.py  silver_stream.py  utils.py
tests/: .gitignore
(+1 files in other folders)
